--- a/environment.yml
+++ b/environment.yml
@@ -7,13 +7,14 @@ dependencies:
   - python=3.11
   - numpy
   - pandas
+  - scipy
   - scikit-learn>=1.6
   - imbalanced-learn
   - matplotlib
   - seaborn
+  - xgboost
+  - lightgbm
+  - catboost>=1.2.5
   - pip
   - pip:
-      - xgboost
-      - lightgbm
-      - catboost>=1.2.5
       - interpret
